<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".ui.fragments.AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/account_icon"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <LinearLayout
            android:id="@+id/linearLayoutAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/buttonAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.5">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/input_background"
                android:gravity="center"
                android:fontFamily="@font/poppins"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/e_mail"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/input_background"
                android:gravity="center"
                android:fontFamily="@font/poppins"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"
                android:textSize="20dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/number"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/numberEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/input_background"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:hint="+994"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_2"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/identity_card_fin_code"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/finCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/input_background"
                android:gravity="center"
                android:fontFamily="@font/poppins"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"
                android:textSize="20dp" />


        </LinearLayout>

        <Button
            android:id="@+id/buttonAccount"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutAccount"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>